2007-12-19  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/cpufreq-popup.c: (cpufreq_popup_run_selector):

	Fix memory leak. Fixes bug #504435. Patch by
	<kripkensteiner@gmail.com>.
	
2007-07-17  Jaap Haitsma <jaap@haitsma.org>

	* GNOME_CPUFreqApplet.xml: Use gtk-about i.s.o. gnome-stock-about
	Fixes bug #456955

	* src/cpufreq-applet.c: (cpufreq_applet_init),
	(cpufreq_applet_destroy), (cpufreq_applet_about_cb),
	(cpufreq_applet_update), (cpufreq_applet_setup):
	Use g_set_application name such that the application name
	gets shown correctly in the about dialog. Convert usage of GtkTooltips
	to new tooltips API of GTK 2.12 Fixes bug #457145

2007-07-14  Callum McKenzie  <callum@spooky-possum.org>

	* pixmaps/Makefile.am (install-data-local): Use = instead of ==
	for comparisons to make the scripts work on BSD. See bug #456701.

2007-01-18  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/cpufreq-monitor-sysfs.c:
	* src/cpufreq-monitor-procfs.c:
	* src/cpufreq-monitor-libcpufreq.c:
	* src/cpufreq-monitor.c:

	Do not stop run timeout callback when a cpu is not online. It happens
	on suspend/resume. Fixes bug #356694.

2006-12-16  Carlos Garcia Campos  <carlosgc@gnome.org>

	* cpufreq-applet.schemas.in:
	* cpufreq-preferences.glade:
	* src/cpufreq-applet.[ch]:
	* src/cpufreq-monitor.[ch]:
	* src/cpufreq-popup.c:
	* src/cpufreq-prefs.[ch]:

	Rework popup menu layout by merging frequencies and governors menu
	into a single menu. Fixes bug #380314.

2006-11-21  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/cpufreq-applet.c:

	Request a fixed size for the whole applet. Fixes bug #318700. (Based
	on patch by Maik Beckmann)

	* src/cpufreq-monitor-cpuinfo.c:
	* src/cpufreq-monitor-libcpufreq.c:
	* src/cpufreq-monitor-procfs.c:
	* src/cpufreq-monitor-sysfs.c:
	* src/cpufreq-utils.h:

	Fix compile warnings.

2006-11-18  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/cpufreq-prefs.c: 

	Never return a cpu number higher than max cpu. Fixes bug #376621.
